--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URL="mongodb://localhost:27017/chat"
+MONGO_URL="mongodb+srv://sidjangswsx:<password>@cluster0.rejbmb4.mongodb.net/?retryWrites=true&w=majority"
 NODE_ENV=production
